# foxmpi

./: CMakeLists.txt  README.md  main.cpp
