cmake_minimum_required(VERSION 2.8)
project(fox)
find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
add_executable(run main.cpp)
target_link_libraries(run ${MPI_LIBRARIES})
if(MPI_COMPILE_FLAGS)
  set_target_properties(run PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
endif()
if(MPI_LINK_FLAGS)
  set_target_properties(run PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
endif()
